message TableMetaData {
  required string name = 1;
  required int32 record_size = 4;
  required int32 space_for_bit_mask = 5;
  required int32 records_per_page = 6;

  message AttributeDescription {
    required string name = 1;
    required int32 type_name = 2;
    optional int32 size = 3;
  }

  repeated AttributeDescription attribute = 2;

  message IndexMetadata {
    message KeyInfo {
      required string name = 1;
      required bool asc = 2;
    }
    
    required string name = 1;
    required int32 type = 2;
    required bool unique = 3;
    repeated KeyInfo keys = 4;
  }

  repeated IndexMetadata indices = 3;
}